--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -6,6 +6,7 @@
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet" />
+    <link href="styles/layout.css" rel="stylesheet" />
 
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
