Changes made by PCNC Solutions (pcncdeveloper@gmail.com). Bank Accounts Navigation Ready

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -114,22 +114,22 @@
         <div data-role="view" id="bankAccounts"  data-layout="main-layout">
             <ul data-role="listview" data-style="inset">
                 <li>
-                    <h3>Accounts</h3>
+                    <h3>Bank Accounts</h3>
                 </li>
                 <li>
-                    <a data-icon="action" href="#balanceInquiry">Balance Inquiry</a>
+                    <a data-icon="details" href="#balanceInquiry">Balance Inquiry</a>
                 </li>
                 <li>
-                    <a data-icon="action" href="#miniStatement">Mini statement</a>
+                    <a data-icon="organize" href="#miniStatement">Mini statement</a>
                 </li>
                 <li>
-                    <a data-icon="action" href="#fullStatement">Full Statement Request</a>
+                    <a data-icon="mostviewed" href="#cs">Full Statement Request</a>
                 </li>
                 <li>
-                    <a data-icon="action" href="#eBankingRequest">Cash Out</a>
+                    <a data-icon="downloads" href="#cs">E-banking service request</a>
                 </li>
                 <li>
-                    <a data-icon="action" href="#smsBankingRequest">Cash Out</a>
+                    <a data-icon="downloads" href="#cs">SMS Banking request</a>
                 </li>
             </ul>
         </div>
