Changes made by PCNC Solutions (pcncdeveloper@gmail.com). fixed the accounts menu items

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -69,7 +69,7 @@
                     Username <input type="text"/></label></ui> 
                 
                 <ui><label>
-                    Password <input type="password"/></label></ui>
+                    Password&nbsp <input type="password"/></label></ui>
             </ul> 
        
             <div class="buttonArea">
@@ -125,13 +125,13 @@
                     <a data-icon="details" href="#balanceInquiry">Balance Inquiry</a>
                 </li>
                 <li>
-                    <a data-icon="organize" href="#miniStatement">Mini statement</a>
+                    <a data-icon="organize" href="#miniStatement">Mini Statement</a>
                 </li>
                 <li>
                     <a data-icon="mostviewed" href="#cs">Full Statement Request</a>
                 </li>
                 <li>
-                    <a data-icon="downloads" href="#cs">E-banking service request</a>
+                    <a data-icon="downloads" href="#cs">E-Banking Service Request</a>
                 </li>
                 <li>
                     <a data-icon="downloads" href="#cs">SMS Banking request</a>
