--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -3,6 +3,7 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+     <script src="scripts/numeral.min.js"></script>
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet" />
@@ -13,6 +14,7 @@
     <script src="kendo/js/kendo.mobile.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
 
+   
     <script src="scripts/login.js"></script>
     <script src="scripts/location.js"></script>
     <script src="scripts/weather.js"></script>
