Changes made by PCNC Solutions (pcncdeveloper@gmail.com). changed version to 1.1

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -68,7 +68,7 @@
             <br>
             <ul>
                 <ui><label>
-                    Username <input type="text" id="userName" name="log"/></label></ui> 
+                    Username <input type="text" id="userName" /></label></ui> 
                 <br>
                 <ui><label>
                     Password&nbsp <input type="password"/></label></ui>
