Changes made by PCNC Solutions (pcncdeveloper@gmail.com).
finished the views of more Accoount info

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -431,6 +431,8 @@
     <!--Balance Inquiry View Start-->
         <div data-role="view" id="balanceInquiry"  data-layout="main-layout">
             <h3>Balance Inquiry</h3>
+            
+            <h3>Your Accounts List</h3>
             <ul data-role="listview" data-style="inset" id="blancesList">
                 
             </ul >
