Changes made by PCNC Solutions (pcncdeveloper@gmail.com). ver 1.1.1

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -508,7 +508,7 @@
     <!-- more account info view start-->
      <div data-role="view" id="moreAccountInfo"  data-layout="main-layout">
             
-         <h3>More Account info</h3>
+         <h3>Detailed Account info</h3>
          <div >
              <ul data-role="listview" data-style="inset" id="moreInfoDiv">
                
