Changes made by PCNC Solutions (pcncdeveloper@gmail.com). edited iphone stlyes and added placeholders

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -6,8 +6,10 @@
      <script src="scripts/numeral.min.js"></script>
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
-    <link href="styles/layout4.css" rel="stylesheet" />
+   <link href="styles/layout6.css" rel="stylesheet" />
+  <!--   <link href="styles/layouttest.css" rel="stylesheet" />-->
  <link href="styles/style.css" rel="stylesheet" />
+    
     
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
@@ -72,13 +74,12 @@
                     <li>
                         <label class="input1" >
                             Username
-                                <input type="text" id="username"/>
+                                <input type="text" id="username" placeholder="username" />
                         </label>
                     </li>
                     <li>
                         <label>
-                            Password
-                                <input class="input1" type="password" id="password"/>
+                            Password<input class="input1" type="password" id="password" placeholder="password" />
                         </label>
                     </li>
                 </ul>
