Changes made by PCNC Solutions (pcncdeveloper@gmail.com). coming soon

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -206,7 +206,7 @@
     
      <!--Comming Soon View Start-->
         <div data-role="view" id="cs"  data-layout="main-layout">
-            <h3>Commming Soon .....</h3>
+            <h3>Coming Soon .....</h3>
         </div>
     <!--Mini Statemnet View End-->
     
