Changes made by PCNC Solutions (pcncdeveloper@gmail.com). added viewModel.js

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -21,6 +21,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/palpay.js"></script>
+    <script src="scripts/viewModel.js"></script>
     
 
 </head>
