Changes made by PCNC Solutions (pcncdeveloper@gmail.com).
fixed the logout button

--- a/mb_palpay/index.html
+++ b/mb_palpay/index.html
@@ -51,7 +51,7 @@
     <div data-role="header">
         <div data-role="navbar">
             <span data-role="view-title" id="viewTitle" >&nbsp;</span>
-            <a data-role="backbutton" data-align="left">Log out</a>
+            <a data-role="backbutton" data-align="left" id="logout">Log out</a>
         </div>
     </div>    
         <div data-role="footer">
